# ghcpsdknotify

./: .gitignore  AGENTS.md  LICENSE  README.md  generate_pptx.py  main.py  mcp.json  pyproject.toml
.github/workflows/: codeql.yml
app/: autostart.py  config.py  copilot_client.py  feature_a.py  feature_b.py  feature_c.py  feature_d.py  file_selector.py  folder_scanner.py  i18n.py  logger.py  main.py  notifier.py  output_writer.py  page_monitor.py  prompts.py  quiz_scorer.py  quiz_server.py  sample_data.py  scheduler.py  settings_ui.py  setup_wizard.py  spaced_repetition.py  state_manager.py  utils.py  viewer.py
assets/: default_template.pptx
docs/: demo_scenario.md  presentation_en.md  project_summary.md
install/: create_shortcut.bat  start.bat
presentations/: ghcpsdknotify.pptx
prompts/: i18n-prompt-plan.md  implementation-prompts.md  sample-data-prompt.md
prompts/feature_a/: discovery_en.md  discovery_ja.md  system_en.md  system_ja.md  user_en.md  user_ja.md  workiq_rules_en.md  workiq_rules_ja.md
prompts/feature_b/: system_en.md  system_ja.md  user_en.md  user_ja.md
spec/: app-specification.md  feature-backlog.md
tests/: test_autostart.py  test_config.py  test_copilot_client.py  test_feature_a.py  test_feature_b.py  test_feature_c.py  test_feature_d.py  test_file_selector.py  test_folder_scanner.py  test_i18n.py  test_integration_smoke.py  test_output_writer.py  test_page_monitor.py  test_prompts.py  test_quiz_scorer.py  test_sample_data.py  test_scheduler.py  test_spaced_repetition.py  test_state_manager.py  test_utils.py
(+8 files in other folders)
